--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pearl Store</title>
+    <title>Ganja Store</title>
   </head>
-  <body class="bg-slate-50 dark:bg-slate-950 text-[#333] dark:text-[#fff]">
+  <body
+    class="bg-slate-50 dark:bg-slate-950 text-[#333] dark:text-[#fff] text-xs md:text-sm lg:text-md"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
